--- a/ait_partner_dedicated_location/static/description/index.html
+++ b/ait_partner_dedicated_location/static/description/index.html
@@ -1,32 +1,38 @@
-<section class="oe_container lead mt64">
-    <div class="row">
-        <div class="col-12 text-center">
-            <div class="d-inline-block bg-primary text-white px-3 py-2 rounded mb-2">
-                <strong>Supported :</strong>
-            </div>
-            <div class="d-inline-block bg-primary text-white px-3 py-2 rounded mb-2" title="The tool is compatible with the Odoo Enterprise version">
-                <i class="fa fa-check me-1"></i>
-                <strong>Enterprise</strong>
-            </div>
-            <div class="d-inline-block bg-primary text-white px-3 py-2 rounded mb-2" title="The tool is compatible with the Odoo Community version">
-                <i class="fa fa-check me-1"></i>
-                <strong>Community</strong>
-            </div>
-            <div class="d-inline-block bg-primary text-white px-3 py-2 rounded mb-2" title="The tool might be installed to Odoo.sh if you have a linked private git repository">
-                <i class="fa fa-check me-1"></i>
-                <strong>Odoo.sh</strong>
-            </div>
-        </div>
-    </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Partner Dedicated Location</title>
+</head>
+<body>
+    <h1>Partner Dedicated Location</h1>
+    <p>This module automates the creation of dedicated locations for partners. It manages:</p>
+    <ul>
+        <li>Customer Location</li>
+        <li>Vendor Location</li>
+        <li>Subcontracting Location</li>
+        <li>Rental Location</li>
+    </ul>
+    <p>These can be created only once per partner by simply clicking the checkboxes and saving partner changes.</p>
+    <img src="https://github.com/user-attachments/assets/4f2a63c1-d32b-4f3f-8d00-5b3b18f15026" alt="Dedicated Locations Screenshot">
+    
+    <h2>Configuration</h2>
+    <p>
+        <ul>
+            <li>Go to 'Settings / Inventory / Warehouse', and select the Multi-Step Routes option.</li>
+            <li>You can now select or create Parent Locations for Customer/Vendor/Subcontracting/Rental partners specific locations.</li>
+        </ul>
+    </p>
+    <img src="https://github.com/user-attachments/assets/f06506de-f4d3-4f52-bd03-173c38faac3e" alt="Configuration Screenshot">
+    
+    <h2>Usage</h2>
+    <p>To use this module, you need to:</p>
+    <ul>
+        <li>Select the options for Dedicated Locations inside the partner form</li>
+    </ul>
+    <img src="https://github.com/user-attachments/assets/2ae5d1db-c94f-486b-b100-56eca8dd4b4e" alt="Usage Screenshot">
+    <p>The module will create dedicated customer/vendor/subcontracting/rental locations for the partner and assign them to the specific fields.</p>
 
-<section class="oe_container lead bi_title_box">
-    <div class="row">
-        <div class="col-12 text-center">
-            <h2 class="oe_slogan bi_title text-primary">
-                <b>Aion Tech - Partner Location Auto Create</b>
-            </h2>
-            <p class="oe_slogan">Automate partner location creation in your warehouse setup.</p>
-        </div>
-    </div>
-</section>
+</body>
+</html>
