--- a/ait_partner_dedicated_location/static/description/index.html
+++ b/ait_partner_dedicated_location/static/description/index.html
@@ -1,32 +1,117 @@
-<section class="oe_container lead mt64">
-    <div class="row">
-        <div class="col-12 text-center">
-            <div class="d-inline-block bg-primary text-white px-3 py-2 rounded mb-2">
-                <strong>Supported :</strong>
-            </div>
-            <div class="d-inline-block bg-primary text-white px-3 py-2 rounded mb-2" title="The tool is compatible with the Odoo Enterprise version">
-                <i class="fa fa-check me-1"></i>
-                <strong>Enterprise</strong>
-            </div>
-            <div class="d-inline-block bg-primary text-white px-3 py-2 rounded mb-2" title="The tool is compatible with the Odoo Community version">
-                <i class="fa fa-check me-1"></i>
-                <strong>Community</strong>
-            </div>
-            <div class="d-inline-block bg-primary text-white px-3 py-2 rounded mb-2" title="The tool might be installed to Odoo.sh if you have a linked private git repository">
-                <i class="fa fa-check me-1"></i>
-                <strong>Odoo.sh</strong>
-            </div>
-        </div>
-    </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <img alt="AION TECH" class="img-fluid img-logo" loading="lazy" src="./assets/logo/logo.png">
+    <title>Partner Dedicated Location</title>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Ubuntu', sans-serif;
+            background-color: #FDFCFB;
+            margin: 0;
+            padding: 20px;
+            font-size: 18px;
+        }
+        h1 {
+            font-size: 32px;
+            color: #333;
+            text-align: center;
+        }
+        h2 {
+            font-size: 26px;
+            color: #333;
+            text-align: center;
+        }
+        p, ul {
+            color: #555;
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: left;
+            font-size: 20px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            margin-top: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .img-logo {
+            max-width: 100%;
+            height: 250px;
+            border-radius: 10px;
+            margin-top: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
+</head>
+<body>
+    <h1>Partner Dedicated Location</h1>
+    <p>This module automates the creation of dedicated locations for partners. It manages:</p>
+    <ul>
+        <li>Customer Location</li>
+        <li>Vendor Location</li>
+        <li>Subcontracting Location</li>
+        <li>Rental Location</li>
+    </ul>
+    <img alt="Dedicated Locations Screenshot" class="img-fluid" loading="lazy" src="./assets/screenshots/1.png">
+    
+    <h2>Configuration</h2>
+    <p>Follow these steps:</p>
+    <ul>
+        <li>Go to 'Settings / Inventory / Warehouse', and select the Multi-Step Routes option.</li>
+        <li>You can now select or create Parent Locations for Customer/Vendor/Subcontracting/Rental partners specific locations.</li>
+    </ul>
+    <img alt="Configuration Screenshot" class="img-fluid" loading="lazy" src="./assets/screenshots/2.png">
+    
+    <h2>Usage</h2>
+    <p>To use this module, you need to:</p>
+    <ul>
+        <li>Select the options for Dedicated Locations inside the partner form</li>
+    </ul>
+    <br/>
+    <p>The module will create dedicated customer/vendor/subcontracting/rental locations for the partner and assign them to the specific fields.</p>
+    <img alt="Usage Screenshot" class="img-fluid" loading="lazy" src="./assets/screenshots/3.png">
+    <br/>
+    <h2>Contacts</h2>
+    <p style="text-align: center;">
+        <a href="mailto:support@aiontech.odoo.com" target="_blank"
+           style="
+              background-color: transparent;
+              border-radius: 35px;
+              display: inline-block;
+              padding: 7px 33px;
+              border: 1px solid var(--primary-color);
+              color: var(--primary-color);
+              text-decoration: none;
+            " class="mx-1 mb-2 deep-1 deep_hover">
+            <img class="img" style="width: 24px" src="./assets/icons/email.svg"/>
+            <span class="pl-2" style=" font-size: 16px; vertical-align: middle">Email</span>
+        </a>
+        <a href="https://aiontech.company/it/" target="_blank"
+           style="
+              background-color: transparent;
+              border-radius: 35px;
+              display: inline-block;
+              padding: 7px 33px;
+              border: 1px solid var(--primary-color);
+              color: var(--primary-color);
+              text-decoration: none;
+              margin-left: 10px;
+            " class="mx-1 mb-2 deep-1 deep_hover">
+            <img class="img" style="width: 24px" src="./assets/icons/world.png"/>
+            <span class="pl-2" style=" font-size: 16px; vertical-align: middle">Website</span>
+        </a>
+    </p>
 
-<section class="oe_container lead bi_title_box">
-    <div class="row">
-        <div class="col-12 text-center">
-            <h2 class="oe_slogan bi_title text-primary">
-                <b>Aion Tech - Partner Location Auto Create</b>
-            </h2>
-            <p class="oe_slogan">Automate partner location creation in your warehouse setup.</p>
-        </div>
-    </div>
-</section>
+</body>
+</html>
+
